# Hiro

./: .gitignore  Makefile
apps/server/: .env.example  .gitignore  Makefile  main.py  pyproject.toml  requirements.txt
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0b08fdbb53ff_initial.py  304381395a26_create_threads_and_messages.py  3118f9f684d6_add_user_column_and_relationship_with_.py
apps/server/api/v1/routes/: messages.py  threads.py
apps/server/src/: main.py
apps/server/src/api/v1/: auth_api.py  health.py  health_api.py  message_api.py  messages.py  thread_api.py  threads.py  user_api.py
apps/server/src/core/: config.py  db.py  lifespan.py  security.py
apps/server/src/core/security/: __init__.py  cookies.py  google_oauth.py  passwords.py  tokens.py
apps/server/src/db/: base.py  session.py
apps/server/src/db/models/: __init__.py  message_model.py  messages.py  thread_model.py  threads.py  user.py  user_model.py
apps/server/src/dependencies/: auth.py
apps/server/src/helpers/: enum.py  token.py
apps/server/src/middleware/: auth_middleware.py  logging_middleware.py
apps/server/src/schema/: __init__.py  message_schema.py  messages.py  thread_schema.py  threads.py  user_schema.py
apps/server/src/services/: auth_service.py  message_service.py  thread_service.py  user_service.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/signin/: page.tsx
apps/web/components/: index.ts
infra/: docker-compose.yml
(+3 files in other folders)
